2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Customize diff-hl-margin faces.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (diff-hl-margin-symbols-alist): Use more Chinese
	characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Diff-hl: Display Chinese characters in the margins

	* init.el (diff-hl-margin-symbols-alist): Set to use Chinese
	characters.
	(+diff-hl-enlarge-margin-width): New function.  Enlarge margin
	widths to accommodate Chinese characters.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	* init.el (toggle-map): Bind "t" to `consult-theme'.

2025-07-28  Zhengyi Fu  <i@fuzy.me>

	Fix modify-otehr-keys

	* site-lisp/modify-other-keys.el
	(modify-other-keys--setup-input-decode-map): New function.  Set up
	per-terminal input-decode-map.

2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (embark-cycle-key): Set to "C-.".

2025-07-27  Zhengyi Fu  <i@fuzy.me>

	* init.el (copy-json-as-lisp): New command.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: Refactor.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/modify-other-keys.el: New file.

2025-07-25  Zhengyi Fu  <i@fuzy.me>

	* init.el (remote-eat): Remove connection local variables profile.
	(eat-exec@connection-local-vars): Remove advice.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (kill-do-not-save-duplicates): Set to t.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	Configuration for Niri

	* init.el (+import-env-var-for-display): New function.  Add to
	`server-after-make-frame-hook'.
	(+niri-xdg-open): New function.  Set as default browser if Emacs
	is running in Niri session.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	* init.el (eat-tramp-shells): Configure shell for scpx method.

2025-07-24  Zhengyi Fu  <i@fuzy.me>

	Update gptel configuration

	* site-lisp/gptel-config.el (+gptel-auto-scroll-safe): Set
	`scroll-preserve-screen-position' locally to t.
	* init.el: Bind "C-j" to `gptel-send' in `gptel-mode-map'.